--- a/AuthSystem/Areas/Identity/Pages/Admin/AdminDashboard.cshtml
+++ b/AuthSystem/Areas/Identity/Pages/Admin/AdminDashboard.cshtml
@@ -22,11 +22,12 @@
             <div class="card bg-lilac text-white text-center">
                 <div class="card-body">
                     <i class="fas fa-comments fa-2x mb-3"></i>
-                    <h5 class="card-title">@Model.TotalGroupChats</h5>
-                    <p class="card-text">Total Group Chats</p>
+                    <h5 class="card-title">@Model.TotalChatRooms</h5>
+                    <p class="card-text">Total Chat Rooms</p>
                 </div>
             </div>
         </div>
+        
         <div class="col-md-4 col-sm-6 mb-4">
             <div class="card bg-sagegreen text-white text-center">
                 <div class="card-body">
