--- a/AuthSystem/Areas/Identity/Pages/Chat/CreateChatRoom.cshtml
+++ b/AuthSystem/Areas/Identity/Pages/Chat/CreateChatRoom.cshtml
@@ -11,9 +11,9 @@
         <label asp-for="RoomName"></label>
         <input asp-for="RoomName" class="form-control" />
     </div>
-    <div class="form-check">
+    <!--<div class="form-check">
         <input asp-for="IsGroupChat" class="form-check-input" />
         <label asp-for="IsGroupChat" class="form-check-label">Is Group Chat</label>
-    </div>
+    </div>-->
     <button type="submit" class="btn btn-primary">Create Room</button>
 </form>
