--- a/AuthSystem/Areas/Identity/Pages/Admin/Index.cshtml
+++ b/AuthSystem/Areas/Identity/Pages/Admin/Index.cshtml
@@ -19,7 +19,18 @@
                 </div>
             </div>
         </form>
-        
+
+        <div class="date-filters">
+            <form method="get">
+                <div class="input-group">
+                    <input type="date" class="form-control date-picker" name="StartDate" value="@Model.StartDate?.ToString("yyyy-MM-dd")" />
+                    <input type="date" class="form-control date-picker" name="EndDate" value="@Model.EndDate?.ToString("yyyy-MM-dd")" />
+                    <div class="input-group-append">
+                        <button type="submit" class="btn btn-outline-secondary">Filter</button>
+                    </div>
+                </div>
+            </form>
+        </div>
 
         <div class="btn-users">
             <a class="btn-add-user" asp-area="Identity" asp-page="ActiveUsers">
@@ -31,17 +42,7 @@
         </div>
     </div>
 
-    <div class="header-controls date-filters">
-
-        <form method="get">
-            <div class="input-group">
-                <input type="date" class="form-control date-picker" name="StartDate" value="@Model.StartDate?.ToString("yyyy-MM-dd")" />
-                <input type="date" class="form-control date-picker" name="EndDate" value="@Model.EndDate?.ToString("yyyy-MM-dd")" />
-                <div class="input-group-append">
-                    <button type="submit" class="btn btn-outline-secondary">Filter</button>
-                </div>
-            </div>
-        </form>
+    <div class="dropdown-container">
         <form method="get">
             <select name="SelectedRole" class="dropdown-filter" onchange="this.form.submit()">
                 <option value="">All Roles</option>
@@ -51,9 +52,7 @@
                 }
             </select>
         </form>
-
     </div>
-
 </div>
 
 <div class="table-container">
@@ -113,7 +112,6 @@
                 </tr>
             }
         </tbody>
-        
     </table>
     <form method="post" asp-page-handler="ExportToExcel" class="d-inline" style="margin-right:10px;">
         <button type="submit" class="btn btn-outline-success">Export to Excel</button>
@@ -121,7 +119,6 @@
     <form method="post" asp-page-handler="ExportToPdf" class="d-inline">
         <button type="submit" class="btn btn-outline-danger">Export to PDF</button>
     </form>
-
 </div>
 
 @section Scripts {
