--- a/AuthSystem/Views/Shared/_Layout.cshtml
+++ b/AuthSystem/Views/Shared/_Layout.cshtml
@@ -12,12 +12,28 @@
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
 </head>
+<style>
+    * {
+        font-family: "Open Sans", sans-serif;
+        font-optical-sizing: auto;
+        font-weight: <weight>;
+        font-style: normal;
+        font-variation-settings: "wdth" 100;
+    }
+</style>
 <body>
     <header>
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
             <div class="container-fluid">
-                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">ChatterBox</a>
+                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">
+                    <img src="~/img/logo1.png" alt="Logo" style="height: 40px; display:flex;">
+                    
+                </a>
+                ChatterBox
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
@@ -25,25 +41,20 @@
                     <ul class="navbar-nav ml-auto">
                         @if (SignInManager.IsSignedIn(User))
                         {
-                            
                             @if (User.IsInRole("Admin"))
                             {
                                 <li class="nav-item">
                                     <a class="nav-link" asp-area="Identity" asp-page="/Admin/AdminDashboard">Home</a>
                                 </li>
-                                /*<li class="nav-item">
-                                    <a class="nav-link" asp-controller="Home" asp-action="Chat">Chat</a>
-                                </li>*/
                                 <li class="nav-item">
                                     <a class="nav-link" asp-area="Identity" asp-page="/Chat/GlobalChat">Chat</a>
                                 </li>
-                                /*<li class="nav-item">
-                                    <a class="nav-link" asp-area="Identity" asp-page="/Chat/SupportBot">Support</a>
-                                </li>*/
+                                <li class="nav-item">
+                                    <a class="nav-link" asp-area="Identity" asp-page="/Chat/ChatRooms">Chat Rooms</a>
+                                </li>
                                 <li class="nav-item">
                                     <a class="nav-link" asp-area="Identity" asp-page="/Admin/Index">User Management</a>
                                 </li>
-
                                 <li class="nav-item">
                                     <a class="nav-link" asp-area="Identity" asp-page="/Admin/UserActivity">User Activity</a>
                                 </li>
@@ -61,9 +72,6 @@
                                 </li>
                                 <li class="nav-item">
                                     <a class="nav-link" asp-area="Identity" asp-page="/Chat/ChatRooms">Chat Rooms</a>
-                                </li>
-                                <li class="nav-item">
-                                    <a class="nav-link" asp-area="Identity" asp-page="/Chat/CreateChatRoom">Create Chat Room</a>
                                 </li>
                                 <li class="nav-item">
                                     <a id="logout" class="nav-link" asp-area="Identity" asp-page="/Account/Logout">Logout</a>
